--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
 # Python-generated files
 __pycache__/
-*.py[oc]
+*.py[cod]
 build/
 dist/
 wheels/
 *.egg-info
+*.pytest_cache/
+.mypy_cache/
+.coverage
+htmlcov/
 
 # Virtual environments
 .venv
 
+# PyCharm
 .idea
+*.iml
+*.iws
+workspace.xml
