--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,9 @@
 repos:
+- repo: https://github.com/astral-sh/uv-pre-commit
+  # uv version.
+  rev: 0.9.28
+  hooks:
+    - id: uv-lock
 - repo: https://github.com/psf/black-pre-commit-mirror
   rev: 25.12.0
   hooks:
