--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,20 @@ wheels/
 .mypy_cache/
 .coverage
 htmlcov/
+.Python
+.uv/
+.uvlock
 
 # Virtual environments
 .venv
+venv/
+env/
 
 # PyCharm
-.idea
+.idea/
+.vscode/
+*.swp
+*.swo
 *.iml
 *.iws
 workspace.xml
