--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "ipython>=9.10.0",
     "nox>=2025.11.12",
+    "polars>=1.37.1",
     "pre-commit>=4.5.1",
     "pytest>=9.0.2",
     "ytsaurus-client>=0.13.46",
