--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ipython>=9.10.0",
+    "loguru>=0.7.3",
     "nox>=2025.11.12",
     "polars>=1.37.1",
     "pre-commit>=4.5.1",
