--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ dependencies = [
     "ipython>=9.10.0",
     "loguru>=0.7.3",
     "nox>=2025.11.12",
+    "numpy>=2.4.2",
     "polars>=1.37.1",
     "pre-commit>=4.5.1",
     "pytest>=9.0.2",
+    "scikit-learn>=1.8.0",
+    "typing-extensions>=4.15.0",
     "ytsaurus-client>=0.13.46",
 ]
 
