--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "ipython>=9.10.0",
     "loguru>=0.7.3",
     "marimo>=0.19.7",
+    "matplotlib>=3.10.8",
     "nox>=2025.11.12",
     "numpy>=2.4.2",
+    "pandas>=3.0.0",
     "polars>=1.37.1",
     "pre-commit>=4.5.1",
     "pytest>=9.0.2",
