--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib>=3.10.8",
     "nox>=2025.11.12",
     "numpy>=2.4.2",
+    "optuna>=4.7.0",
     "pandas>=3.0.0",
     "polars>=1.37.1",
     "pre-commit>=4.5.1",
