--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "catboost>=1.2.8",
+    "click>=8.3.1",
     "ipython>=9.10.0",
     "loguru>=0.7.3",
     "marimo>=0.19.7",
